--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: red;
+    background-color: #07003f;
     background-image: url(/static/stars.jpg);
     color: #fff;
 }
