--- a/articles/templates/articles/articleslist.html
+++ b/articles/templates/articles/articleslist.html
@@ -8,7 +8,9 @@ articles
         <h1>Articles list </h1>
     {% for article in articles %}
         <h2>
-            <a href="#"> {{article.title}} </a>
+            <a href="{% url 'articles:detail' slug=article.slug %}"> 
+                {{article.title}} 
+            </a>
         </h2>
         <p>
             {{article.snippet}}
