added image field and image to article template

--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -3,6 +3,9 @@
 
 <div class="article-detail">
     <div class="article">
+
+        <img src="{{article.image.url}}" alt="">
+
         <h1>
             {{article.title}}
         </h1>
